# workspace_smart_tcp

./: Cargo.toml
smart_client/: Cargo.toml
smart_client/src/: lib.rs
smart_server/: Cargo.toml
smart_server/src/: handler.rs  main.rs  smart_socket.rs
smart_tui/: Cargo.toml
smart_tui/src/: main.rs  state.rs
stp/: Cargo.toml
stp/examples/: client.rs  server.rs
stp/src/: client.rs  lib.rs  server.rs
thermo_client/: Cargo.toml
thermo_client/src/: main.rs
thermo_server/: Cargo.toml
